--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="destruct.js"></script>
+  <script src="xhr.js"></script>
 </body>
 </html>
